--- a/Society_News.html
+++ b/Society_News.html
@@ -130,6 +130,74 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>2022 Update - Newsletter & Summer Exhibit</h2>
+      <hr>
+      <h5>February 21, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">1 / 3</div>
+    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">2 / 3</div>
+    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">3 / 3</div>
+    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_03.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>At first glance, the photos above don’t seem to be Chateaugay history-related. But, they are actually a part of the two major projects we are working on right now.</p> 
+
+<p>First, is our newsletter preparation; which is an on-going process. We are editing our next issue, which will be mailed to members next month. We think you will enjoy the upcoming articles – everything from airplane building in Chateaugay, to an historic home in the village, to a very notable business block on East Main and also a memory of farming in the 1940s.</p>
+
+<p>Our second project is our upcoming summer exhibit. The research and development necessary for the display has begun in earnest. It will open on June 29th and will be available for viewing all summer. It will examine the Early Years of the History of Chateaugay Lake. Among our exhibit display topics will be: </p>
+
+<li>The earliest settlement and settlers</li>
+<li>Transportation and its development as people and commerce came and went from the early Lakes</li>
+<li>The building of the Forge Dam and the effects of raising the water levels of the Lakes and the Narrows</li>
+<li>The Native American seasonal presence on the Lake and the various legends that have been told about their time in the area</li> 
+<li>A look at the earliest country schools in the area around the Lakes</li>
+<li>A framed display of the works of artist, Arthur Fitzwilliam Tait. He visited the Bellows Lake House (later known as the Banner House) for several years during the mid-1800s. We have seven of his works that we believe were set in the area around Chateaugay Lake. </li>
+
+<br />
+
+<p>As the photos show, the framing of the Tait prints is well under way. The specific image included above (3/3) is probably the one we are all most familiar with. This ice fishing scene will be available at the exhibit, not in the version shown here, but as a large vintage print, mounted in a wonderful, ornate antique frame. The other six Tait scenes will all be newly matted and framed and will show his works both as original oil paintings and as lithographs produced by Currier and Ives. Each view will be complimented with a text panel, explaining the history and details of each work.</p>
+
+<p>We are looking forward to readying the newsletter for our members. We think we have another interesting and well-illustrated issue. The summer exhibit promises to be both information filled and eye catching. We hope you enjoy them both.</p>
+
+<p>Our group may be small, but we try to remain busy and working to present more of the history of Chateaugay and area each year. </p>
+
+<p>Thanks for your continued support.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog1">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>CCS 2021 Pearl Harbor Exhibit</h2>
       <hr>
       <h5>December 7, 2021 | Mick Jarvis</h5>
@@ -141,63 +209,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -216,7 +284,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Gates Hoit Map</h2>
@@ -230,21 +298,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -268,7 +336,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Reopening, Newsletter, Exhibits and More!</h2>
@@ -282,15 +350,15 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-05-18_chsupdate/chsupdate2_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -324,7 +392,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Historical Society Update</h2>
@@ -338,63 +406,63 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
