--- a/blog.html
+++ b/blog.html
@@ -130,6 +130,74 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>2022 Update - Newsletter & Summer Exhibit</h2>
+      <hr>
+      <h5>February 21, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">1 / 3</div>
+    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">2 / 3</div>
+    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides2 none">
+     <div class="numbertext">3 / 3</div>
+    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_03.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>At first glance, the photos above don’t seem to be Chateaugay history-related. But, they are actually a part of the two major projects we are working on right now.</p> 
+
+<p>First, is our newsletter preparation; which is an on-going process. We are editing our next issue, which will be mailed to members next month. We think you will enjoy the upcoming articles – everything from airplane building in Chateaugay, to an historic home in the village, to a very notable business block on East Main and also a memory of farming in the 1940s.</p>
+
+<p>Our second project is our upcoming summer exhibit. The research and development necessary for the display has begun in earnest. It will open on June 29th and will be available for viewing all summer. It will examine the Early Years of the History of Chateaugay Lake. Among our exhibit display topics will be: </p>
+
+<li>The earliest settlement and settlers</li>
+<li>Transportation and its development as people and commerce came and went from the early Lakes</li>
+<li>The building of the Forge Dam and the effects of raising the water levels of the Lakes and the Narrows</li>
+<li>The Native American seasonal presence on the Lake and the various legends that have been told about their time in the area</li> 
+<li>A look at the earliest country schools in the area around the Lakes</li>
+<li>A framed display of the works of artist, Arthur Fitzwilliam Tait. He visited the Bellows Lake House (later known as the Banner House) for several years during the mid-1800s. We have seven of his works that we believe were set in the area around Chateaugay Lake. </li>
+
+<br />
+
+<p>As the photos show, the framing of the Tait prints is well under way. The specific image included above (3/3) is probably the one we are all most familiar with. This ice fishing scene will be available at the exhibit, not in the version shown here, but as a large vintage print, mounted in a wonderful, ornate antique frame. The other six Tait scenes will all be newly matted and framed and will show his works both as original oil paintings and as lithographs produced by Currier and Ives. Each view will be complimented with a text panel, explaining the history and details of each work.</p>
+
+<p>We are looking forward to readying the newsletter for our members. We think we have another interesting and well-illustrated issue. The summer exhibit promises to be both information filled and eye catching. We hope you enjoy them both.</p>
+
+<p>Our group may be small, but we try to remain busy and working to present more of the history of Chateaugay and area each year. </p>
+
+<p>Thanks for your continued support.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog1">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Pine Lodge</h2>
       <hr>
       <h5>February 13, 2022 | Mick Jarvis</h5>
@@ -141,27 +209,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -184,109 +252,6 @@
 <p>Pictured above: a portrait of John M. Humphrey and two photos I took of the camp while ice fishing on the Upper Lake in 2006. The photos clearly show how well maintained the camp has been over the years. </p>
 
 <p>I believe Pine Lodge is still owned by the Humphrey family.</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Baseball Memories at the "Old School"</h2>
-      <hr>
-      <h5>January 22, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 5</div>
-    <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 5</div>
-    <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 5</div>
-    <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 5</div>
-    <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 5</div>
-    <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_05.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>I find myself sitting here in a bright, sunny room browsing through Facebook and seeing lots of baseball-related posts (especially from the 50s and 60s). Even though it is ten below zero on this sun-splashed late morning, my thoughts have drifted back to the “sandlot” days of playing at the end of Church Street. </p>
-
-<p>The Old School ballfield was the meeting place for the neighborhood kids. It drew us like a magnet. I never remember phoning anyone to see if they were going to play ball; everyone just appeared, carrying their gloves, a few had bats and, most importantly, we hoped someone had a baseball.</p>
-
-<p>Standing on the field or in the batter’s box on that sunny lot, the summery blue sky above and the “heat bugs” (Canadian cicadas actually) buzzing and singing, there was no better feeling in the world for a preteen baseball-fanatic kid than that.</p>
-
-<p>We would toss a bat to choose up sides and the game would begin. I remember the first year I taught at the newly formed Northern Adirondack Central School. I was in Altona for the first two years as the new high school was being built. I was teaching 7th and 8th grade Social Studies. We always took our kids outside for recess and would play softball. I rotated the captains for two teams each day and they used the tossed bat to pick teams.</p> 
-
-<p>I wonder some 52 years later, and with sandlot baseball practically extinct, if today’s kids would know how to use a bat to pick teams…let alone know what three fingers at the top of the bat meant.</p>
-
-<p>There were other sandlots in town. I remember some of us from our neighborhood playing at the Bell Avenue field and even at school on River Street a few times, but that felt like they were “away” games because the Old School field just felt so familiar and comfortable.</p>
-
-<p>No one had a lot of money, so we were always “making do” to keep the games going. If our treasured baseball would begin to fall apart as the stitching in the seams gave out, our go-to solution was to use black electricians’ tape to keep it together. It worked pretty well but the ball had to be re-taped quite frequently as the sand and gravel of the filed wore at it quickly. I am sure that many of our fathers wondered where their roll of black tape was…</p>
-
-<p>I remember one time, our last ball was in need of rewrapping. No one had any black tape but Stephen Wood, I think, had a roll of wide white athletic tape. We figured that would work so we set about tearing it into narrow strips and wound it around the ball. Back to the game we went.</p> 
-
-<p>However, the white tape didn’t stick quite as well as the electrician version did and as the game went on, the edges of tape strips began to roll back. With some of the sticky side exposed, the ball soon began to pick up sand and gravel grains from the field. As more grains stuck, more tape peeled back and more grains stuck, and on and on. We eventually had to stop playing that day because the ball had become a sand-covered sphere quite a bit bigger than what we had started with and pretty hard to grip and throw. </p>
-
-<p>Someone, somehow, came up with a roll of black tape and we were soon back to playing again.</p>
-
-<p>I remember one day when a couple of us were headed to the Boardman to fish. We crossed the RR tracks just east of McArdle’s house. Walking up a path at the end of the cheese plant’s last building, we turned left to head down the cinder path that curved around to the base of Boardman Hill. We didn’t know it then, but that was the last remaining trace of the half mile racetrack that was part of the local fairgrounds.</p> 
-
-<p>As we walked the path, we happened to spot a baseball lying in the grass next to the left field line of the Sheffield Park ballfield. We had struck gold. This was obviously a foul ball that hadn’t been found by the ball chasers during a Ponies’ game. With this ball, we knew we were set at the Old School for a while at least, provided we didn’t lose it to the tall grass surrounding the Old School lot. However, the ball had been there for a while and it was waterlogged and even had a little green mossy growth on it. </p>
-
-<p>I stuck it in my fishing basket. When I got home, I asked my mother if I could try to dry it in our oven. Needless to say, she didn’t think much of that brainstorm and the oven idea died a quiet death. The backup plan was to set it in the sun on our side porch railing for about a week. That worked well enough, we decided, and it became a game ball for us.</p>
-
-<p>We “made do” with our bats as well. If a bat broke we were out of luck. If one cracked, we always felt we could save it by using small wire nails or brads to put it back together and then finishing the job with a good wrapping of black tape. Needless to say, this wasn’t the answer because the bat would split again or completely break the next time it was used.</p>
-
-<p>Two particular times during those baseball years still stand out for me. My first real baseball glove was one of those fat-fingered, no real pocket, oddball webbed creations like the one shown in the first photo above. It was getting pretty worn. I never really liked it, anyway. In the early 60s, fielder’s gloves were changing. They were getting longer, much better shaped and with better designed webbing. Major leaguers were using them and they were just plain “cool” to me. </p>
-
-<p>I had been saving my money from my paper route and from mowing lawns with a plan to use it for a new glove. I don’t remember how, but I found out that the National Army Store in Malone was due to get an assortment of new gloves…and that there were supposed to be some Mickey Mantle models in the shipment. That was all I needed to hear. I got my father to take me out to Malone first thing Saturday morning so I could get one. I woke up about five o’clock and nervously paced and watched the clock until we left. Out we went to the car (a pea-green, 1961 Ford Galaxy 500, standard shift, four-door monster) and off we headed.</p>
-
-<p>My greatest fear was realized as soon as we walked into the Army Store. They had only gotten two Mantle gloves and they were already gone. Rather than throw myself on the floor, teeth gnashing and completely disappointed, my father urged me to at least look at the gloves that were still available. Although I was looking half-heartedly, I had to admit they were nice and every one was a definite upgrade from my old one. I can still remember standing there next to the bin of gloves and the smell of the new leather that just wafted up from them.</p>
-
-<p>I ended up picking out an Ernie Broglio model. He was a St. Louis Cardinal – not a Yankee – but he was having a pretty good year at the time. Although I was a die-hard Yankees fan, I just loved baseball – period. I followed the game and appreciated players like Stan Musial, Warren Spahn, Ted Williams, Willie Mays, and others for the great players for that they were. On the way home, I decided my Ernie Broglio glove was a pretty nice one. It proved to be a great purchase for me. </p>
-
-<p>Once we got home, I immediately went into my dad’s shop (just a back room in the house, actually) and grabbed a can of Neatsfoot oil. We normally used it for our leather hunting boots, to keep them supple and water resistant. Sitting the sun on our side porch I worked the oil into the new leather of the Broglio glove, feeling it soften and watching it acquire an even deeper and richer color. The last thing to do was to put a baseball in the pocket and tie the glove closed with twine to begin the shaping of it. The ball and twine was a day’s end ritual for about a week. The glove took on the shape I wanted. I was a pretty happy camper. The glove became one of my most treasured possessions. In fact, I still have it (photos two and three above).</p>
-
-<p>The other time that sticks in my mind was that same summer when Pete Coryea’s Western Auto on East Main Street got in a number of baseball bats. I walked in one afternoon while on my paper route to look around. There, in the bunch of new bats, was a Mickey Mantle model. I couldn’t believe my eyes. I don’t remember how much I paid for it, but I asked him to set it aside for me. </p>
-
-<p>I finished delivering my papers, pretty much on a dead run, charged into the house and up the stairs into my room. In the back of my closet was a White Owl cigar box where I put the money I was saving from the paper route and my lawn mowing. I counted out what I needed, put the cigar box back in place, and ran downstreet to pay for the bat. </p>
-
-<p>Walking up to the field at the Old School the next day, I felt as proud as I had when I showed up the first time with my new glove. Everybody oohed and awed over the new 34” bat. It was well used for the next several summers. Only by the grace of God did it never crack, splinter or break. Like the glove, I still have it. As the photos show (images four and five), it is well worn but still intact. I think it might have also been used to hit a few rocks.</p>
-
-<p>My warmest memories of baseball as a youngster are of playing catch with my Dad. But, those memories of playing at the “Old School” come in a close second.</p>
         </div>
     </div>
 </div>
