--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,129 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Shopping in 1892</h2>
+      <hr>
+      <h5>March 27, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_09.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">10 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_10.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">11 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_11.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">12 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_12.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">13 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_13.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">14 / 14</div>
+    <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_14.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Shopping—Some people love it, some people hate it. Whatever the case, shoppers want to know what is available and where to go to purchase it.</p> 
+
+<p>It was no different 130 years ago in Chateaugay. During this week in 1892, local shoppers had a wide range of goods available from a large number of retailers right here in town. </p>
+
+<p>Main Street, from the west end (about where White Street is today) to the east end (up to about where Quinlin’s was-Stewarts is now), was a busy and filled business district. There were shops in all the storefronts, as second floor walk-ups, and even behind the Main Street buildings. Shops extended down River Street, up Depot Street, and down John Street. The alley that used to be between Pearl’s and Alix’s even had a name: Union Avenue-which led to businesses in the back of the East Main Street buildings. </p>
+
+<p>Main Street was not yet paved and had hitching posts placed throughout the entire district as shoppers found plenty of places to tie up their teams as they shopped.</p>
+
+<p>The first two photos give us the flavor of Main Street back at that time. After that, are some of the ads that appeared in the Chateaugay Record during the third week of March 1892. </p>
+
+<p>People could meet all their needs with the wide variety of firms doing business in town. Even all the nationally advertised medications, tinctures and balms were available in the local pharmacies.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>2022 Update - Newsletter & Summer Exhibit</h2>
       <hr>
       <h5>March 12, 2022 | Mick Jarvis</h5>
@@ -84,21 +207,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -127,7 +250,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>2022 Update - Newsletter & Summer Exhibit</h2>
@@ -141,27 +264,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -194,75 +317,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Pine Lodge</h2>
-      <hr>
-      <h5>February 13, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 3</div>
-    <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 3</div>
-    <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 3</div>
-    <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_03.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Chateaugay Lake was noted for several resorts during the 1800s. The Banner House, the Merrill House, Indian Point, the Sunset Inn and the Owlyout were the most recognized names (they were known by other labels over the years, as well). </p>
-
-<p>In addition to those well-known, major hotels, there were a number of private camps that became quite familiar to the public and were frequently referred to, both in conversation and in writings about the Lake.</p>
-
-<p>One of those prominent camps was built by John M. Humphrey, a leading citizen of Churubusco. He was one of the earlier settlers of that area and became a prominent businessman. In addition to his own businesses, he formed a partnership with Albert D. Boomhower. Together they ran mercantile and creamery operations.</p>
-
-<p>In 1884, their partnership extended to the construction of a large camp on the eastern shore of Upper Chateaugay Lake. Shortly after, a falling out between the two, led Humphrey to sell his share to Boomhower. </p>
-
-<p>In 1886, Humphrey bought property on the back side of the Upper Lake from the Chateaugay Ore and Iron Company. This land was near the south inlet and the building materials had to be brought over the ice in the winter as no roads were ever (nor are now) extended that far down the back side of the Upper Lake.</p>
-
-<p>The camp had six rooms, all finished and trimmed out. It had lath and plaster walls and was as “modern” and well-appointed as any 1886 home would be.</p>
-
-<p>He called the camp “Pine Lodge” and that name remains on it today. </p>
-
-<p>Pictured above: a portrait of John M. Humphrey and two photos I took of the camp while ice fishing on the Upper Lake in 2006. The photos clearly show how well maintained the camp has been over the years. </p>
-
-<p>I believe Pine Lodge is still owned by the Humphrey family.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [March 18, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [March 27, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
